--- a/EcommerceProject/Areas/Admin/Views/Home/Dashboard.cshtml
+++ b/EcommerceProject/Areas/Admin/Views/Home/Dashboard.cshtml
@@ -29,7 +29,7 @@
                         <div class="alert alert-danger">@TempData["ErrorMessage"]</div>
                     }
 
-                    <h4 class="card-title"> Welcome to Your Dashboard </h4>
+                    <h4 class="card-title">Welcome, @User.Identity.Name!</h4>
 
                     <!-- You can add additional content here, like stats, charts, tables, etc. -->
 
