--- a/EcommerceProject/Areas/Admin/Views/Authentication/AccessDenied.cshtml
+++ b/EcommerceProject/Areas/Admin/Views/Authentication/AccessDenied.cshtml
@@ -3,7 +3,35 @@
     ViewData["Title"] = "Access denied";
 }
 
-<header>
-    <h1 class="text-danger">@ViewData["Title"]</h1>
-    <p class="text-danger">You do not have access to this resource.</p>
-</header>
+
+@*
+    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+*@
+@{
+}
+
+<div class="content-wrapper">
+    <div class="page-header">
+        <h3 class="page-title"> Access denied </h3>
+        
+    </div>
+    <div class="row">
+        <div class="col-lg-12 grid-margin stretch-card">
+            <div class="card">
+                <div class="card-body">
+                    <!-- Display response messages (Success/Error) -->
+                    @if (TempData["SuccessMessage"] != null)
+                    {
+                        <div class="alert alert-success">@TempData["SuccessMessage"]</div>
+                    }
+                    @if (TempData["ErrorMessage"] != null)
+                    {
+                        <div class="alert alert-danger">@TempData["ErrorMessage"]</div>
+                    }
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
